--- a/index.html
+++ b/index.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Advanced Calculator</title>
     <link rel="stylesheet" href="style.css" />
-    <title>CALCULATOR</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="calculator">
+</head>
+<body>
+    <div class="calculator">
         <input type="text" id="inputBox" placeholder="0" readonly />
         <div class="row">
-          <button class="button operator" aria-label="Clear All">AC</button>
-          <button class="button operator" aria-label="Delete">DEL</button>
-          <button class="button operator" aria-label="Percentage">%</button>
-          <button class="button operator" aria-label="Divide">/</button>
+            <button class="button operator" aria-label="Clear All">AC</button>
+            <button class="button operator" aria-label="Delete">DEL</button>
+            <button class="button operator" aria-label="Percentage">%</button>
+            <button class="button operator" aria-label="Divide">/</button>
         </div>
         <div class="row">
-          <button class="button">7</button>
-          <button class="button">8</button>
-          <button class="button">9</button>
-          <button class="button operator" aria-label="Multiply">*</button>
+            <button class="button">7</button>
+            <button class="button">8</button>
+            <button class="button">9</button>
+            <button class="button operator" aria-label="Multiply">*</button>
         </div>
         <div class="row">
-          <button class="button">4</button>
-          <button class="button">5</button>
-          <button class="button">6</button>
-          <button class="button operator" aria-label="Subtract">-</button>
+            <button class="button">4</button>
+            <button class="button">5</button>
+            <button class="button">6</button>
+            <button class="button operator" aria-label="Subtract">-</button>
         </div>
         <div class="row">
-          <button class="button">1</button>
-          <button class="button">2</button>
-          <button class="button">3</button>
-          <button class="button operator" aria-label="Add">+</button>
+            <button class="button">1</button>
+            <button class="button">2</button>
+            <button class="button">3</button>
+            <button class="button operator" aria-label="Add">+</button>
         </div>
         <div class="row">
-          <button class="button">00</button>
-          <button class="button">0</button>
-          <button class="button">.</button>
-          <button class="button equalBtn" aria-label="Equals">=</button>
+            <button class="button">00</button>
+            <button class="button">0</button>
+            <button class="button">.</button>
+            <button class="button equalBtn" aria-label="Equals">=</button>
         </div>
-      </div>
     </div>
+
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
